[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/UI/EndLevel.gd" type="Script" id=1]

[node name="EndLevel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Center" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Center"]
margin_left = 459.0
margin_top = 151.0
margin_right = 564.0
margin_bottom = 449.0

[node name="CenterContainer" type="CenterContainer" parent="Center/VBoxContainer"]
margin_right = 105.0
margin_bottom = 30.0

[node name="Label" type="Label" parent="Center/VBoxContainer/CenterContainer"]
margin_left = 4.0
margin_right = 100.0
margin_bottom = 30.0
text = "Level done"

[node name="MarginContainer" type="MarginContainer" parent="Center/VBoxContainer"]
margin_top = 34.0
margin_right = 105.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 50 )

[node name="CenterContainer2" type="CenterContainer" parent="Center/VBoxContainer"]
margin_top = 88.0
margin_right = 105.0
margin_bottom = 118.0

[node name="HBoxContainer" type="HBoxContainer" parent="Center/VBoxContainer/CenterContainer2"]
margin_left = 42.0
margin_right = 63.0
margin_bottom = 30.0

[node name="Money" type="Label" parent="Center/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_bottom = 30.0

[node name="Separator" type="Label" parent="Center/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 4.0
margin_right = 17.0
margin_bottom = 30.0
text = "/"

[node name="Objective" type="Label" parent="Center/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 21.0
margin_right = 21.0
margin_bottom = 30.0

[node name="MarginContainer2" type="MarginContainer" parent="Center/VBoxContainer"]
margin_top = 122.0
margin_right = 105.0
margin_bottom = 172.0
rect_min_size = Vector2( 0, 50 )

[node name="CenterContainer3" type="CenterContainer" parent="Center/VBoxContainer"]
margin_top = 176.0
margin_right = 105.0
margin_bottom = 206.0

[node name="Outcome" type="Label" parent="Center/VBoxContainer/CenterContainer3"]
margin_left = 47.0
margin_right = 58.0
margin_bottom = 30.0
text = "?"

[node name="NextLevelButton" type="Button" parent="Center/VBoxContainer"]
margin_top = 210.0
margin_right = 105.0
margin_bottom = 252.0
text = "Next level"

[node name="RestartButton" type="Button" parent="Center/VBoxContainer"]
margin_top = 256.0
margin_right = 105.0
margin_bottom = 298.0
text = "Restart"

[connection signal="pressed" from="Center/VBoxContainer/NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
[connection signal="pressed" from="Center/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
